--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
     }
   },
   "rules": {
-    "quotes": ["error", "single"],
+    "quotes": ["error", "single", { "avoidEscape": true }],
     "arrow-body-style": ["error", "as-needed"],
     "react/prop-types": "off",
     "react/jsx-curly-brace-presence": [
