--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-tabs": "^3.2.2",
     "sass": "^1.42.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-tabs": "^2.3.3",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint-plugin-import": "^2.23.4"
   }
