--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "warhammer-armies-maker",
-  "version": "0.1.0",
+  "name": "klak",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
@@ -17,6 +17,7 @@
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/react-tabs": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "clsx": "^1.1.1",
     "eslint": "^7.32.0",
@@ -53,7 +54,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-tabs": "^2.3.3",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint-plugin-import": "^2.23.4"
   }
