--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
+    "express": "^4.18.1",
     "node-sass": "^6.0.1",
+    "pg": "^8.7.3",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
