--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
     "sass": "^1.42.1",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.5.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
